Support text alignment for TableViewHeader

task-number: QTBUG-33072
[ChangeLog][QtQuickControls][TableView] TableView headers
now respect TableViewColumn::textAlignment

Change-Id: I482e74e10b8879b367bce8165fa9310b28a06ad2
Reviewed-by: J-P Nurmi <jpnurmi@digia.com>